--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,14 @@
 
 * {
   font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   background-color: #f9fafc;
   /*backup font here*/
-  padding: 15px;
+  padding: 20px;
 }
 
 .main-content p {
@@ -18,6 +20,7 @@ body {
 
 .main-content h1 {
   font-size: 25px;
+  margin-bottom: 15px;
 }
 
 li {
@@ -39,6 +42,7 @@ nav {
   padding-left: 0px;
   padding-bottom: 3px;
   padding-right: 0px;
+  align-items: center;
 }
 
 .nav-link a {
@@ -68,4 +72,84 @@ a:visited {
 
 .main-content p {
   margin-bottom: 20px;
+}
+
+.circle-container {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .nav-link {
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+    margin: 0;
+  }
+
+  .nav-link li {
+    margin-left: 10px;
+  }
+
+  .logo {
+    flex-grow: 1;
+  }
+
+  .button {
+    width: auto;
+    padding: 5px 15px;
+    margin: 0;
+  }
+  .main-content p {
+    width: 50%;
+  }
+
+  .circle-container {
+    display: block;
+    position: relative;
+    height: 250px;
+    width: 250px;
+    float: right;
+  }
+
+  .large-circle {
+    position: absolute;
+    border-radius: 50%;
+    background-color: rgba(247, 136, 167, 0.6);
+    height: 200px;
+    width: 200px;
+    right: 50px;
+  }
+
+  .small-circle {
+    position: absolute;
+    border-radius: 50%;
+    background-color: rgba(207, 130, 213, 0.6);
+    height: 100px;
+    width: 100px;
+    right: 0px;
+    top: 50px;
+  }
+
+  .medium-circle {
+    position: absolute;
+    border-radius: 50%;
+    background-color: rgba(247, 193, 162, 0.7);
+    height: 150px;
+    width: 150px;
+    right: 0px;
+    top: 100px;
+  }
+
+  main {
+    display: flex;
+    margin-top: 120px;
+  }
+
+  #scroll-down.button {
+    position: fixed;
+    bottom: 10px;
+    width: auto;
+    left: 45;
+    right: 45%;
+  }
 }
